[project]
name = "dnd-qna"
version = "0.1.0"
description = "AI assistant that answers questions about dnd rules"
authors = [
    {name = "Kseniia Sych",email = "Sych.Kseniia@tesco.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers (>=5.6.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "dnd_qna", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
